--- a/FloraDB/App.config
+++ b/FloraDB/App.config
@@ -5,6 +5,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="fileName" value="C:\temp\Plant_Names.xlsx"/>
+    <add key="fileName" value="C:\temp\Plant_Names - Copy - Copy"/>
   </appSettings>
 </configuration>
